# cubic_interpolation

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  LICENSE  README.md  conanfile.py  conanfile.txt  example.cxx
CubicInterpolation/: Axis.h  BicubicSplines.h  CMakeLists.txt  CubicSplines.h  Interpolant.h  InterpolantBuilder.h  Utility.h
CubicInterpolation/detail/: Axis.cxx  BicubicSplines.cxx  CMakeLists.txt  CubicSplines.cxx  CubicSplines_imp.cxx  Interpolant.cxx  Interpolant.hpp  InterpolantBuilder.cxx
CubicInterpolation/details/: BicubicSplines.cxx  CMakeLists.txt  CubicSplines.cxx  Interpolant.cxx  InterpolantBuilder.cxx
cmake/: boost.cmake  eigen.cmake  googletest.cmake
docs/: CMakeLists.txt  Doxyfile.in  FindSphinx.cmake  conf.py
docs/reST/: axis.rst  cubicsplines.rst  index.rst  interpolant.rst  splines.rst  utility.rst
docs/reST/axis/: Axis.rst  ExpAxis.rst  LinAxis.rst
docs/reST/interpolant/: Interpolant.rst  find_parameter.rst
docs/reST/splines/: Bicubic.rst  Cubic.rst
example/: 1dim_example.cxx  2dim_example.cxx  CMakeLists.txt  FindParameter.cxx
interpolate/: Axis.h  BicubicSplines.h  CMakeLists.txt  CubicSplines.h  InterpolantBuilder.h  Utility.h
src/: CMakeLists.txt  Config.cmake.in
src/CubicInterpolation/: Axis.h  CMakeLists.txt  CubicSplines.h  FindParameter.hpp  Interpolant.h  Interpolant.hpp  InterpolantBuilder.h  version.h.in
src/detail/: Axis.cxx  BicubicSplines.cxx  BicubicSplines_imp.cxx  CMakeLists.txt  CubicSplines.cxx  FindParameter.cxx  Interpolant.cxx  InterpolantBuilder.cxx
tests/: CMakeLists.txt  TestAxis.cpp  TestBicubicSplines.cpp  TestCubicSplines.cpp  TestFindParameter.cpp  conanfile.py
