find_package(CubicInterpolation)

add_executable(1dim_example 1dim_example.cxx)
target_link_libraries(1dim_example CubicInterpolation::CubicInterpolation)

add_executable(2dim_example 2dim_example.cxx)
target_link_libraries(2dim_example CubicInterpolation::CubicInterpolation)

add_executable(FindParameter FindParameter.cxx)
target_link_libraries(FindParameter CubicInterpolation::CubicInterpolation)
